--- a/views/user.ejs
+++ b/views/user.ejs
@@ -10,6 +10,7 @@
     <h2>User Info</h2><br><br>
     <span>First: <%=first%></span><br>
     <span>Last: <%=last%></span><br>
-    <span>JWS: <%=jws%></span>
+    <span>JWS: <%=jws%></span><br>
+    <span>User: <%=user%></span>
 </body>
 </html>
