modified routes for 406

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h2>User Info</h2><br><br>
-    <span>First: <%=first%></span><br>
-    <span>Last: <%=last%></span><br>
-    <span>JWS: <%=jws%></span><br>
+    <span>First: <%=first%></span><br><br>
+    <span>Last: <%=last%></span><br><br>
+    <span>JWS: <%=jws%></span><br><br>
     <span>User: <%=user%></span>
 </body>
 </html>
